charts/best-practices-dockerfile/pols/validate-healthcheck-instruction.yaml
apiVersion: json.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: validate-healthcheck-instruction
  annotations:
    policies.kyverno.io/title: Validate Healthcheck Instruction
    policies.kyverno.io/category: Dockerfile Best Practices
    policies.kyverno.io/severity: medium
    policies.nirmata.io/remediation-docs: "https://docs.nirmata.io/policysets/dockerfile_best_practices/validate-healthcheck-instruction/"
    policies.kyverno.io/description: >-
      This policy checks if the HEALTHCHECK instruction is defined in the Dockerfile.
spec:
  rules:
    - name: validate-healthcheck-instruction
      match:
        all:
        - ($analyzer.resource.type): dockerfile
        - (Stages[].Commands[] | length(@) > `0`): true
      assert:
        any:
        - message: HEALTHCHECK instruction is not defined
          check:
            (Stages[].Commands[?Name=='HEALTHCHECK'][] | length(@) > `0`): true
